# teamAI

./: .env.example  .gitignore  LICENSE  PROJECT_MEMORY.md  README.md  agents.yaml  entities.json  mempalace.yaml  pyproject.toml  run-smoke.sh
evals/: teamai_smoke.json
teamai/: __init__.py  agent_registry.py  api.py  approvals.py  bridge.py  cli.py  codex_prompts.py  config.py  daemon.py  distillation.py  evals.py  events.py  handoff.py  jobs.py  json_utils.py  memory.py  model_backend.py  prompts.py  runtime.py  sandbox.py  schemas.py  supervisor.py  tools.py  verification.py
teamai/integrations/: __init__.py  codex_bridge.py  gemini_bridge.py
tests/: test_api.py  test_approvals.py  test_bridge.py  test_cli.py  test_codex_bridge.py  test_distillation.py  test_evals.py  test_gemini_bridge.py  test_handoff.py  test_json_utils.py  test_memory.py  test_runtime.py  test_sandbox.py  test_supervisor.py  test_tools.py  test_verification.py
